force-app/main/default/objects/Account/fields/Active_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Active_Marketplace__c</fullName>
    <label>Active Marketplace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>