force-app/main/default/objects/Account/fields/Closed_Opportunitys__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunitys__c</fullName>
    <label>Closed Opportunitys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>