force-app/main/default/objects/Account/fields/Contact_limit__c.field-meta.xml
<CustomField>
    <fullName>Contact_limit__c</fullName>
    <label>Contact limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>