force-app/main/default/objects/Account/fields/Customer_Complaint_Cases__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaint_Cases__c</fullName>
    <label>Customer Complaint Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>