force-app/main/default/objects/Account/fields/Mult_select__c.field-meta.xml
<CustomField>
    <fullName>Mult_select__c</fullName>
    <label>Mult select</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>