force-app/main/default/objects/Account/fields/Open_Opportunitys__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunitys__c</fullName>
    <label>Open Opportunitys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>