force-app/main/default/objects/Account/fields/Opportunity_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total_Amount__c</fullName>
    <label>Opportunity Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>