force-app/main/default/objects/Account/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <label>Opportunity Record count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>