force-app/main/default/objects/Account/fields/Related_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Amount__c</fullName>
    <label>Related Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>