force-app/main/default/objects/Account/fields/Secondaryuser__c.field-meta.xml
<CustomField>
    <fullName>Secondaryuser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondaryuser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>