force-app/main/default/objects/Account/fields/Technical_Support_Cases__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support_Cases__c</fullName>
    <label>Technical Support Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>